--- a/RecipeBox/Views/Recipes/Details.cshtml
+++ b/RecipeBox/Views/Recipes/Details.cshtml
@@ -20,7 +20,7 @@ else
     @foreach(TagRecipe join in Model.JoinEntities)
     {
       <li>Tag: @join.Tag.Title</li>
-      @using (Html.BeginForm("DeleteJoin", "Items"))
+      @using (Html.BeginForm("DeleteJoin", "Recipes"))
       {
         @Html.Hidden("joinId", @join.TagRecipeId)
         <input type="submit" value="Delete"/>
