--- a/RecipeBox/Views/Tags/AddRecipe.cshtml
+++ b/RecipeBox/Views/Tags/AddRecipe.cshtml
@@ -12,7 +12,7 @@
 {
     @Html.HiddenFor(model => model.TagId)
 
-    @Html.Label("Select recipe")
+    @Html.Label("Select recipe:")
     @Html.DropDownList("RecipeId")
 
     <input type="submit" value="Save" />
