--- a/RecipeBox/Views/Recipes/AddTag.cshtml
+++ b/RecipeBox/Views/Recipes/AddTag.cshtml
@@ -2,11 +2,12 @@
   Layout = "_Layout";
 }
 
-@model RecipeBox.Models.Item
+@model RecipeBox.Models.Recipe
 
 <h2>Add a tag</h2>
 
 <h4>Add a tag to this item: @Html.DisplayFor(model => model.Name)</h4>
+<p>@Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger", @style = "font-weight: 600;" })</p>
 
 @using (Html.BeginForm())
 {
