--- a/RecipeBox/Views/Shared/_Layout.cshtml
+++ b/RecipeBox/Views/Shared/_Layout.cshtml
@@ -11,6 +11,42 @@
     <link rel="stylesheet" href="~/css/styles.css">
   </head>
   <body>
+  <nav class="navbar navbar-expand-lg" style="background-color: #7c9b5c;">
+    
+      <a class="navbar-brand" href="/"></a>
+      
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+      </button>
+      
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          
+          <li class="nav-item active">
+            <a class="nav-link" href="/" style="color:#4c463d;">Home</a>
+          </li>
+          
+          <li class="nav-item">
+            <a class="nav-link" href="/Recipes" style="color:  #4c463d;" >Recipes</a>
+          </li>
+          
+          <li class="nav-item">
+            <a class="nav-link" href="/Tags" style="color:  #4c463d;">Tags</a>
+          </li>
+        </ul>
+      </div>
+      @using (Html.BeginForm("Search","Recipes"))
+      {
+        <div class="input-group">
+          <div class="form-outline">
+            @Html.TextBox("userSearch")
+          </div>
+          <input type="submit" value="Search">
+          <i class="fas fa-search"></i>
+        </div>
+      } 
+    
+    </nav>
     @RenderBody()
   </body>
 </html>
