--- a/RecipeBox/wwwroot/css/styles.css
+++ b/RecipeBox/wwwroot/css/styles.css
@@ -56,7 +56,7 @@ ol {
 /* Header */
 header {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   padding: 1em;
   background-color: #ee82ee;
@@ -178,11 +178,10 @@ main {
   text-align:center;
 }
 
-nav > * {
-  border: 2px black solid;
-}
-#evergreenNavbar {
+
+
+#evergreenNavbar > * {
   display: flex;
-  align-items: center;
-  justify-content: center;
+  align-items: space-around;
+  justify-content: space-around;
 }
