added top rated recipes and better rating stars
Co-authored-by: Chris <johnedisc@users.noreply.github.com>
Co-authored-by: erintimli01 <erintimli01@users.noreply.github.com>
Co-authored-by: Luckie <eluckie.d@gmail.com>
Co-authored-by: John Diggins <John-Dig@users.noreply.github.com>
Co-authored-by: Eliot Gronstal <eliot.lauren@gmail.com>

--- a/RecipeBox/Views/Home/Index.cshtml
+++ b/RecipeBox/Views/Home/Index.cshtml
@@ -11,12 +11,12 @@
 @if (User.Identity.IsAuthenticated)
 {
   <h4>Recipes for @User.Identity.Name</h4>
-  @if (Model["recipes"].Length == 0)
+  @if (Model.Count == 0)
   {
     <p>No recipes have been added yet!</p>
   } 
   <ul>
-    @foreach (Recipe recipe in Model["recipes"])
+    @foreach (Recipe recipe in Model)
     {
       <li>@Html.ActionLink(@recipe.Name, "Details", "Recipes", new { id = @recipe.RecipeId})</li>
     }
