--- a/RecipeBox/Views/Recipes/Create.cshtml
+++ b/RecipeBox/Views/Recipes/Create.cshtml
@@ -23,15 +23,15 @@
   @Html.LabelFor(model => model.Instructions)
   @Html.TextAreaFor(model => model.Instructions)
 
-
-@Html.LabelFor(model => model.Rating)
+<br>
+@Html.LabelFor(model => model.Rating)<br>
 <input type="radio" id="rating" name="Rating" value="1" checked>
-<label for="rating">1</label>
+<label for="rating">⭐</label><br>
 
-<label>@Html.RadioButtonFor(model => model.Rating,2) 2</label>
-<label>@Html.RadioButtonFor(model => model.Rating,3) 3</label>
-<label>@Html.RadioButtonFor(model => model.Rating,4) 4</label>
-<label>@Html.RadioButtonFor(model => model.Rating,5) 5 </label>
+<label>@Html.RadioButtonFor(model => model.Rating,2) ⭐⭐</label><br>
+<label>@Html.RadioButtonFor(model => model.Rating,3) ⭐⭐⭐</label><br>
+<label>@Html.RadioButtonFor(model => model.Rating,4) ⭐⭐⭐⭐</label><br>
+<label>@Html.RadioButtonFor(model => model.Rating,5) ⭐⭐⭐⭐⭐ </label><br>
 
   <input type="submit" value="Add new recipe" class="btn btn-primary" />
 }
