--- a/RecipeBox/Views/Recipes/Search.cshtml
+++ b/RecipeBox/Views/Recipes/Search.cshtml
@@ -4,7 +4,7 @@
 
 @using RecipeBox.Models;
 
-<h1 class="recipe-list">Search Results</h1>
+<h1 class="recipe-list"></h1>
 
 @if (@Model.Count == 0)
 {
@@ -12,6 +12,7 @@
 } 
 else
 {
+  <h3>Search result for Recipes</h3>
     @foreach(Recipe recipe in Model)
   {
     <li>@Html.ActionLink($"{recipe.Name}", "Details", new { id = recipe.RecipeId })
