--- a/RecipeBox/Views/Tags/Details.cshtml
+++ b/RecipeBox/Views/Tags/Details.cshtml
@@ -30,6 +30,6 @@ else
 }
 
 <p>@Html.ActionLink("Back to list", "Index")</p>
-<p>@Html.ActionLink("Add an Recipe", "AddRecipe", new { id = Model.TagId })</p>
+<p>@Html.ActionLink("Add a Recipe", "AddRecipe", new { id = Model.TagId })</p>
 <p>@Html.ActionLink("Edit Tag", "Edit", new { id = Model.TagId })</p>
 <p>@Html.ActionLink("Delete Tag", "Delete", new { id = Model.TagId })</p>
