--- a/RecipeBox/Views/Shared/_Layout.cshtml
+++ b/RecipeBox/Views/Shared/_Layout.cshtml
@@ -3,50 +3,23 @@
   <head>
     <meta charset="utf-8">
     <title>this is your recipe box.</title>
-    <link 
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" 
-      rel="stylesheet" 
-      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" 
-      crossorigin="anonymous">
-    <link rel="stylesheet" href="~/css/styles.css">
+    <link rel="stylesheet" href="~/css/stylesEdit.css">
   </head>
   <body>
-  <nav class="navbar navbar-expand-lg" style="background-color: #7c9b5c;">
-    
-      <a class="navbar-brand" href="/"></a>
-      
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-      </button>
-      
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          
-          <li class="nav-item active">
-            <a class="nav-link" href="/" style="color:#4c463d;">Home</a>
-          </li>
-          
-          <li class="nav-item">
-            <a class="nav-link" href="/Recipes" style="color:  #4c463d;" >Recipes</a>
-          </li>
-          
-          <li class="nav-item">
-            <a class="nav-link" href="/Tags" style="color:  #4c463d;">Tags</a>
-          </li>
-        </ul>
+
+    <nav class="navbar" style="background-color: #7c9b5c;">
+      <div class="button-div">
+        <a class="nav-button" href="/" style="color:#4c463d;">Home</a>
+        <a class="nav-button" href="/Recipes" style="color:  #4c463d;" >Recipes</a>
+        <a class="nav-button" href="/Tags" style="color:  #4c463d;">Tags</a>
       </div>
       @using (Html.BeginForm("Search","Recipes"))
       {
-        <div class="input-group">
-          <div class="form-outline">
-            @Html.TextBox("userSearch")
-          </div>
-          <input type="submit" value="Search">
-          <i class="fas fa-search"></i>
-        </div>
+        @Html.TextBox("userSearch")
+        <input type="submit" value="Search">
       } 
-    
     </nav>
+
     @RenderBody()
   </body>
 </html>
