--- a/RecipeBox/Views/Recipes/Details.cshtml
+++ b/RecipeBox/Views/Recipes/Details.cshtml
@@ -5,34 +5,46 @@
 @using RecipeBox.Models
 @model RecipeBox.Models.Recipe
 
-<h2>Recipe Details</h2>
-<hr />
-<h3>@Html.DisplayNameFor(model => model.Name): @Html.DisplayFor(model => model.Name)</h3>
-<h3>@Html.DisplayNameFor(model => model.Ingredients): @Html.DisplayFor(model => model.Ingredients)</h3>
-<h3>@Html.DisplayNameFor(model => model.Instructions): @Html.DisplayFor(model => model.Instructions)</h3>
-<h3>@Html.DisplayNameFor(model => model.Rating): @Html.DisplayFor(model => model.Rating)</h3>  
+<div class="recipeLayout">
 
-@if(@Model.JoinEntities.Count == 0)
-{
+    <h2 class="name">@Html.DisplayFor(model => model.Name)
+    <span class="rating">@Html.DisplayNameFor(model => model.Rating) @Html.DisplayFor(model => model.Rating)<span>
+    </h2>
+
+    <div>
+    <h3 class="ingredients">@Html.DisplayNameFor(model => model.Ingredients): @Html.DisplayFor(model => model.Ingredients)</h3>
+
+    <h3 class="instructions">@Html.DisplayNameFor(model => model.Instructions): @Html.DisplayFor(model => model.Instructions)</h3> 
+    </div>
+
+  @if(@Model.JoinEntities.Count == 0)
+  {
   <p>This recipe does not have any tags yet!</p>
-}
-else
-{
-  <h4>This recipe has the following tags:</h4>
-  <ul>
-    @foreach(TagRecipe join in Model.JoinEntities)
-    {
-      <li>Tag: @join.Tag.Title</li>
+  }
+  else
+  {
+  <h4 class="tag-label">This recipe has the following tags:</h4>
+    <div class="tags-container">
+      @foreach(TagRecipe join in Model.JoinEntities)
+      {
+        <div class="tags">
+          @join.Tag.Title
       @using (Html.BeginForm("DeleteJoin", "Recipes"))
       {
         @Html.Hidden("joinId", @join.TagRecipeId)
-        <input type="submit" value="Delete"/>
-      }
-    }
-  </ul>
-}
+        <input type="submit" id="tag-button" value="Delete"/>
 
-<p>@Html.ActionLink("Back to list", "Index")</p>
-<p>@Html.ActionLink("Edit Recipe", "Edit", new { id = Model.RecipeId })</p>
-<p>@Html.ActionLink("Add a Tag", "AddTag", new { id = Model.RecipeId })</p>
-<p>@Html.ActionLink("Delete Recipe", "Delete", new { id = Model.RecipeId })</p>
+      }
+        </div>
+      }
+    </div>
+  }
+
+  <div class="recipe-links">
+    <span>@Html.ActionLink(".Back to list", "Index")</span>
+    <span>@Html.ActionLink(".Edit Recipe", "Edit", new { id = Model.RecipeId })</span>
+    <span>@Html.ActionLink(".Add a Tag", "AddTag", new { id = Model.RecipeId })</span>
+    <span>@Html.ActionLink(".Delete Recipe", "Delete", new { id = Model.RecipeId })</span>
+  </div>
+  
+</div>
