--- a/RecipeBox/Views/Account/Register.cshtml
+++ b/RecipeBox/Views/Account/Register.cshtml
@@ -16,6 +16,9 @@
 
 @using (Html.BeginForm("Register", "Account", FormMethod.Post))
 {
+  @Html.Label("First Name:")
+  @Html.TextBoxFor(user=> user.FirstName)
+
   @Html.LabelFor(user => user.Email)
   @Html.TextBoxFor(user=> user.Email)
 
