--- a/RecipeBox/Views/Home/Index.cshtml
+++ b/RecipeBox/Views/Home/Index.cshtml
@@ -10,7 +10,7 @@
 
 @if (User.Identity.IsAuthenticated)
 {
-  <h4>Recipes for @User.Identity.Name</h4>
+  <h4>Recipes for @ViewBag.FirstName!</h4>
   @if (Model.Count == 0)
   {
     <p>No recipes have been added yet!</p>
