--- a/RecipeBox/Views/Recipes/Index.cshtml
+++ b/RecipeBox/Views/Recipes/Index.cshtml
@@ -4,7 +4,7 @@
 
 @using RecipeBox.Models;
 
-<h1 class="recipe-list">Recipes for @User.Identity.Name</h1>
+<h1 class="recipe-list">Recipes for @ViewBag.FirstName</h1>
 
 @if (@Model.Count == 0)
 {
