--- a/RecipeBox/Views/Shared/_Layout.cshtml
+++ b/RecipeBox/Views/Shared/_Layout.cshtml
@@ -6,19 +6,21 @@
     <link rel="stylesheet" href="~/css/styles.css">
   </head>
   <body>
-    <nav id="evergreenNavbar" class="navbar navbar-expand-lg" style="background-color: #7c9b5c;">
-            <a class="nav-link" href="/" style="color:#4c463d;">Home</a>
-            <a class="nav-link" href="/Recipes" style="color:  #4c463d;" >Recipes</a>
-            <a class="nav-link" href="/Tags" style="color:  #4c463d;">Tags</a>
-            <a class="nav-link" href="/Recipes/TopRecipe" style="color:  #4c463d;">Top Rated Recipes</a>
-        @using (Html.BeginForm("Search","Recipes"))
-        {
-          <div class="form-outline">
-            @Html.TextBox("userSearch")
-            <input type="submit" value="Search" />
-          </div>
-        } 
+
+    <nav class="navbar" style="background-color: #7c9b5c;">
+      <div class="button-div">
+        <a class="nav-button" href="/" style="color:#4c463d;">Home</a>
+        <a class="nav-button" href="/Recipes" style="color:  #4c463d;" >Recipes</a>
+        <a class="nav-button" href="/Tags" style="color:  #4c463d;">Tags</a>
+        <a class="nav-button" href="/Recipes/TopRecipe" style="color:  #4c463d;">Top Rated Recipes</a>
+      </div>
+      @using (Html.BeginForm("Search","Recipes"))
+      {
+        @Html.TextBox("userSearch")
+        <input type="submit" value="Search">
+      } 
     </nav>
+
     @RenderBody()
   </body>
 </html>
