--- a/RecipeBox/wwwroot/css/styles.css
+++ b/RecipeBox/wwwroot/css/styles.css
@@ -1,229 +1,122 @@
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-/* Reset styles */
-html {
-  margin: 0;
+:root {
+  font-family: 'Playfair Display', serif;
+  --gutter: 1em;
+  --title-font-size: 4em;
+  --med-font-size: 3em;
+  --sm-font-size: 1.5em;
+  --xs-font-size: 1em;
+  --title-weight: 700;
+  --med-weight: 500;
+  --detail-weight: 400;
+  --link-color: black;
+  --main-text-color: black;
+  --hover-color: #7C9B5C;
+  --micro-detail: 3px;
+}
+
+html > * {
   padding: 0;
-  box-sizing: border-box;
+  margin: 0;
 }
 
-/* Base styles */
-body {
-  font-family: 'Comic Sans MS', cursive, sans-serif;
-  color: #4b0082;
-  background-color: #fae79a;
-  padding: 1rem;
-}
-
-a {
+[href] {
   text-decoration: none;
-  color: #8b0000;
+  color: var(--main-text-color);
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  font-weight: bold;
-  margin: 1em 0;
+[href]:hover {
+  color: var(--hover-color);
 }
 
-h1 {
-  color: #ff4500;
+input {
+  font: inherit;
 }
 
-h2 {
-  color: #6a5acd;
-}
-
-h3 {
-  color: #00ced1;
-}
-
-p {
-  margin: 1em 0;
-  line-height: 1.5;
-  color: #483d8b;
-}
-
-ul,
-ol {
-  margin: 1em 0;
-}
-
-header {
+body {
   display: flex;
-  justify-content: space-between; 
-  align-items: center;
-  padding: 1em;
-  background-color: #ee82ee;
-  border-bottom: 1px solid #4b0082;
-}
-
-.logo {
-  font-size: 2em;
-  font-weight: bold;
-  color: #ff69b4;
+  flex-direction: column;
+  justify-content:space-between;
 }
 
 nav {
   display: flex;
   align-items: center;
-}
-
-nav a {
-  margin-right: 1em;
-  color: #ffa07a;
-}
-
-nav a:hover {
-  color: #ff69b4;
-}
-
-/* Main content */
-main {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 2em;
-  background-color: #f0e68c;
-}
-
-.recipe-card {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-bottom: 2em;
-  padding: 1em;
-  border: 2px dashed #6a5acd;
-  border-radius: 8px;
-  background-color: #fff;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  transition: all 0.2s ease-in-out;
-}
-
-.recipe-card:hover {
-  transform: translateY(-5px);
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
-}
-
-.recipe-card img {
-  width: 100%;
-  margin-bottom: 1em;
-  border-radius: 8px;
-}
-
-.recipe-card h2 {
-  font-size: 1.5em;
-  text-align: center;
-  margin-bottom: 0.5em;
-  color: #483d8b;
-}
-
-.recipe-card p {
-  text-align: center;
-  margin-bottom: 1em;
-  color: #777;
-}
-
-.rating {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-bottom: 1em;
-}
-
-.rating img {
-  width: 1.5em;
-  margin-right: 0.5em;
-}
-
-/* Recipe List */
-.recipe-list {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  margin-bottom: 2em;
-  color: #555;
-}
-
-/* Recipe List Item */
-.recipe-list-item {
-  flex: 0 0 calc(33.33% - 1em);
-  margin: 0.5em;
-  transition: all 0.2s ease-in-out;
-}
-
-.recipe-list-item:hover {
-  transform: translateY(-5px);
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
-  border: 2px solid #f1c40f;
-  border-radius: 8px;
-}
-
-.navbar-nav > li {
-  border-radius: 8px;
-  margin: 0 5px;
-  font-weight: 600;
-}
-  
-.nav-item:hover {
-  background-color:khaki;
-  border-radius:5px;
-}
-
-#evergreenNavbar {
-  display: flex;
   justify-content: space-between;
+  min-height: 7vw;
+  padding: 0 1em;
 }
 
-#evergreenNavbar > * {
-  margin: 1em;
+.nav-button {
+  padding: .1em .1em;
+  border-radius: var(--micro-detail);
+  font-size: var(--sm-font-size);
+}
+
+.nav-button:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+  z-index: 2;
 }
 
 .recipeLayout {
   display: flex;
   flex-direction: column;
-  
+  align-items: stretch;
+  max-width: 70vw;
+  max-height: 90vh;
+  margin: 4vw 0 0 10vw;
+  padding: 0 0 0 5vw;
 }
 
-/* .title {
-  grid-column: 1 / 4;
-  grid-row: 1 / 2;
+.recipeLayout > * {
+  padding: 0;
+  margin: 0;
 }
 
-.title > * {
+.name {
+  font-size: 2rem;
+  opacity: initial;
 }
 
 .rating {
-  grid-column: 4 / 6;
-  grid-row: 1 / 2;
-  font-size: 2rem;
+  font-size: 1rem;
 }
 
-.ingredients {
-  grid-column: 1 / 3;
-  grid-row: 2 / 5;
-  font-size: 2rem;
-}
-
-.instructions {
-  grid-column: 3 / 6;
-  grid-row: 2 / 5;
-  font-size: 2rem;
+#tag-button {
+  padding: .8px;
+  font-size: .6rem;
 }
 
 .tags {
-  grid-column: 1 / 6;
-  grid-row: 5 / 6;
-  font-size: 2rem;
-} */
-
-/* this might need to be changed (below) */
-nav.navbar {
   display: flex;
-  justify-content: center;
   align-items: center;
-  flex-grow: 1; /* Added this line */
+  font-size: 1.3rem;
+  font-weight: 400;
+  font-style: oblique;
+}
+
+.tags > * {
+  padding: 0 1rem;
+}
+
+.tag-label {
+  margin: 0;
+  padding: 0;
+  font-size: 1.1rem;
+}
+
+.tags-container {
+  display: flex;
+  margin: .5em .8em .8em 1.4em;
+}
+
+.recipe-links {
+  display: flex;
+  margin: 10vw 0 0 0;
+}
+
+.recipe-links > * {
+  padding: 1em 1em 1em 0;
 }
