--- a/RecipeBox/Views/Account/Login.cshtml
+++ b/RecipeBox/Views/Account/Login.cshtml
@@ -24,6 +24,7 @@
 
   <input type="submit" value="Log in" />
 }
-
-<p>@Html.ActionLink("Register for an account", "Register")</p>
-<p>@Html.ActionLink("Back to accounts page", "Index")</p>
+<div class="recipe-links">
+  <span>@Html.ActionLink(".Register for an account", "Register")</span>
+  <span>@Html.ActionLink(".Back to accounts page", "Index")</span>
+</div>
