--- a/RecipeBox/Views/Account/Register.cshtml
+++ b/RecipeBox/Views/Account/Register.cshtml
@@ -18,17 +18,19 @@
 {
   @Html.Label("First Name:")
   @Html.TextBoxFor(user=> user.FirstName)
-
+  <br><br>
   @Html.LabelFor(user => user.Email)
   @Html.TextBoxFor(user=> user.Email)
-
+  <br><br>
   @Html.LabelFor(user=> user.Password)
   @Html.EditorFor(user=> user.Password)
 
-  @Html.LabelFor(user=> user.ConfirmPassword)
+  @Html.Label("Confirm Password")
   @Html.EditorFor(user=> user.ConfirmPassword)
-
+  <br><br>
   <input type="submit" value="Register" />
 }
 
-<p>@Html.ActionLink("Back to accounts page", "Index")</p>
+<div class="recipe-links">
+  <span>@Html.ActionLink(".Back to accounts page", "Index")</span>
+</div>
