--- a/RecipeBox/Views/Home/Index.cshtml
+++ b/RecipeBox/Views/Home/Index.cshtml
@@ -4,32 +4,32 @@
 
 @using RecipeBox.Models;
 
-<h1>Welcome to Best Recipes!</h1>
+<div class="recipeIndex">
+  <h1 class="title">Welcome to Best Recipes!</h1>
 
-<hr>
-
-@if (User.Identity.IsAuthenticated)
-{
-  <h4>Recipes for @ViewBag.FirstName!</h4>
-  @if (Model.Count == 0)
+  @if (User.Identity.IsAuthenticated)
   {
-    <p>No recipes have been added yet!</p>
-  } 
-  <ul>
-    @foreach (Recipe recipe in Model)
+    <h4>Recipes for @ViewBag.FirstName!</h4>
+    @if (Model.Count == 0)
     {
-      <li>@Html.ActionLink(@recipe.Name, "Details", "Recipes", new { id = @recipe.RecipeId})</li>
-    }
-  </ul>
-}
-else
-{
-  <h4>Recipes</h4>
-  <p>Please @Html.ActionLink("log in", "LogIn", "Account") to view or manage your recipes.</p>
-}
+      <p>No recipes have been added yet!</p>
+    } 
+    <ul>
+      @foreach (Recipe recipe in Model)
+      {
+        <li>@Html.ActionLink(@recipe.Name, "Details", "Recipes", new { id = @recipe.RecipeId})</li>
+      }
+    </ul>
+  }
+  else
+  {
+    <h4>Recipes</h4>
+    <p>Please @Html.ActionLink("log in", "LogIn", "Account") to view or manage your recipes.</p>
+  }
 
-<hr>
-
-<p>@Html.ActionLink("Manage recipes", "Index", "Recipes")</p> 
-<p>@Html.ActionLink("Manage tags", "Index", "Tags")</p>
-<p>@Html.ActionLink("Create or manage an account", "Index", "Account")</p>
+  <div class="recipe-links">
+    <span>@Html.ActionLink(".Manage recipes", "Index", "Recipes")</span> 
+    <span>@Html.ActionLink(".Manage tags", "Index", "Tags")</span>
+    <span>@Html.ActionLink(".Create or manage an account", "Index", "Account")</span>
+  </div>
+</div>
