--- a/RecipeBox/Views/Recipes/Delete.cshtml
+++ b/RecipeBox/Views/Recipes/Delete.cshtml
@@ -4,11 +4,15 @@
 
 @model RecipeBox.Models.Recipe
 
-<h2>Are you sure you want to delete this?</h2>
+<h2>Are you sure you want to delete this recipe?</h2>
 
 @Html.DisplayNameFor(model => model.Name): @Html.DisplayFor(model => model.Name)
+<br><br>
 @using (Html.BeginForm())
 {
-    <input type="submit" value="Delete" />
+  <input type="submit" value="Delete" />
 }
-@Html.ActionLink("Back to List", "Index")
+
+<div class="recipe-links">
+  <span>@Html.ActionLink(".Back to List", "Index")</span>
+</div>
