--- a/RecipeBox/Views/Recipes/Details.cshtml
+++ b/RecipeBox/Views/Recipes/Details.cshtml
@@ -9,7 +9,7 @@
 
   <h2 class="name">@Html.DisplayFor(model => model.Name)
     <span class="rating">
-        @for (int i=Model.Rating;i>0;i--)
+        @for (int i=Model.Rating; i>0; i--)
         {
           <span>⭐</span>
         }
@@ -46,10 +46,10 @@
     </div>
   }
 
-
 <div class="recipe-links">
   <span>@Html.ActionLink(".Back to list", "Index")</span>
   <span>@Html.ActionLink(".Edit Recipe", "Edit", new { id = Model.RecipeId })</span>
   <span>@Html.ActionLink(".Add a Tag", "AddTag", new { id = Model.RecipeId })</span>
   <span>@Html.ActionLink(".Delete Recipe", "Delete", new { id = Model.RecipeId })</span>
+</div>
 </div>
