--- a/RecipeBox/Views/Tags/Delete.cshtml
+++ b/RecipeBox/Views/Tags/Delete.cshtml
@@ -4,11 +4,13 @@
 
 @model RecipeBox.Models.Tag
 
-<h2>Are you sure you want to delete this?</h2>
+<h2>Are you sure you want to delete the tag "@Html.DisplayFor(model => model.Title)"?</h2>
 
-@Html.DisplayNameFor(model => model.Title): @Html.DisplayFor(model => model.Title)
 @using (Html.BeginForm())
 {
-    <input type="submit" value="Delete" />
+    <input type="submit" value="Confirm delete" />
 }
-@Html.ActionLink("Back to List", "Index")
+
+<div class="recipe-links">
+  <span>@Html.ActionLink(".Back to List", "Index")</span>
+</div>
