--- a/RecipeBox/Views/Tags/Edit.cshtml
+++ b/RecipeBox/Views/Tags/Edit.cshtml
@@ -4,19 +4,19 @@
 
 @model RecipeBox.Models.Tag
 
-<h2>Edit</h2>
-
-<h4>Edit this tag: @Html.DisplayFor(model => model.Title)</h4>
+<h2>Edit @Html.DisplayFor(model => model.Title)</h2>
 
 @using (Html.BeginForm())
 {
-    @Html.HiddenFor(model => model.TagId)
+  @Html.HiddenFor(model => model.TagId)
 
-<p>@Html.ValidationMessageFor(model => model.Title, "", new { @class = "text-danger", @style = "font-weight: 600; color:red;" })</p>
-    @Html.LabelFor(model => model.Title)
-    @Html.EditorFor(model => model.Title)
-
-    <input type="submit" value="Save" />
+  <p>@Html.ValidationMessageFor(model => model.Title, "", new { @class = "text-danger", @style = "font-weight: 600; color:red;" })</p>
+  @Html.Label("Tag:")
+  @Html.EditorFor(model => model.Title)
+  <br><br>
+  <input type="submit" value="Save" />
 }
 
-<p>@Html.ActionLink("Back to list", "Index")</p>
+<div class="recipe-links">
+  <span>@Html.ActionLink(".Back to list", "Index")</span>
+</div>
