--- a/RecipeBox/Views/Tags/Index.cshtml
+++ b/RecipeBox/Views/Tags/Index.cshtml
@@ -4,6 +4,7 @@
 
 @using RecipeBox.Models;
 
+<div class="recipeIndex">
 <h1>Tags</h1>
 
 @if (@Model.Count == 0)
@@ -16,6 +17,10 @@
   <li>@Html.ActionLink($"{tag.Title}", "Details", new { id = tag.TagId })</li>
 }
 
-<p>@Html.ActionLink("Add new tag", "Create")</p>
-
-<p>@Html.ActionLink("Home", "Index", "Home")</p>
+</div>
+<div class="recipeLayout">
+  <div class="recipe-links">
+    <span>@Html.ActionLink(".Add new tag", "Create")</span>
+    <span>@Html.ActionLink(".Home", "Index", "Home")</span>
+  </div>
+</div>
