--- a/RecipeBox/wwwroot/css/styles.css
+++ b/RecipeBox/wwwroot/css/styles.css
@@ -5,11 +5,11 @@
   --gutter: 1em;
   --title-font-size: 4em;
   --med-font-size: 3em;
-  --sm-font-size: 1.5em;
+  --sm-font-size: 1.4em;
   --xs-font-size: 1em;
-  --title-weight: 700;
-  --med-weight: 500;
-  --detail-weight: 400;
+  --title-weight: 800;
+  --med-weight: 700;
+  --detail-weight: 500;
   --link-color: black;
   --main-text-color: black;
   --hover-color: #7C9B5C;
@@ -45,18 +45,20 @@ nav {
   align-items: center;
   justify-content: space-between;
   min-height: 7vw;
-  padding: 0 1em;
+  padding: 0 var(--gutter);
 }
 
 .nav-button {
   padding: .1em .1em;
   border-radius: var(--micro-detail);
-  font-size: var(--sm-font-size);
+  font-size: calc(var(--sm-font-size)*.9);
+  padding: 0 calc(var(--gutter)* .5);
+  transition: 1s;
 }
 
 .nav-button:hover {
   transform: translateY(-5px);
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+  text-shadow: -2px 6px 5px rgba(0, 0, 0, 0.4);
   z-index: 2;
 }
 
@@ -117,6 +119,22 @@ nav {
   margin: 10vw 0 0 0;
 }
 
-.recipe-links > * {
+.recipe-links span > * {
   padding: 1em 1em 1em 0;
+  font-weight: var(--detail-weight);
 }
+
+.recipeIndex {
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  max-width: 70vw;
+  max-height: 90vh;
+  margin: 4vw 0 0 0;
+  padding: 0 0 0 5vw;
+  text-align: center;
+  }
+
+  li {
+    list-style: none;
+  }
