added editing feature to username
Co-authored-by: Luckie <eluckie.d@gmail.com>
Co-authored-by: Chris <johnedisc@users.noreply.github.com>
Co-authored-by: John Diggins <John-Dig@users.noreply.github.com>
Co-authored-by: erintimli01 <erintimli01@users.noreply.github.com>

--- a/RecipeBox/Views/Account/Index.cshtml
+++ b/RecipeBox/Views/Account/Index.cshtml
@@ -7,10 +7,11 @@
   <h2>Hello @ViewBag.FirstName!</h2>
   @using (Html.BeginForm("LogOff", "Account"))
   {
-    <input type="submit" class="btn btn-primary" value="Log out" />
+    <input type="submit" id="green-button" value="Log out" />
   }
   <div class="recipe-links">
     <span>@Html.ActionLink(".Home", "Index", "Home")</span>
+    <span>@Html.ActionLink(".Edit Name", "Edit")</span>
   </div>
 }
 else
