--- a/RecipeBox/Views/Account/Register.cshtml
+++ b/RecipeBox/Views/Account/Register.cshtml
@@ -28,7 +28,7 @@
   @Html.Label("Confirm Password")
   @Html.EditorFor(user=> user.ConfirmPassword)
   <br><br>
-  <input type="submit" value="Register" />
+  <input type="submit" value="Register" id="green-button"/>
 }
 
 <div class="recipe-links">
