--- a/RecipeBox/Views/Recipes/Create.cshtml
+++ b/RecipeBox/Views/Recipes/Create.cshtml
@@ -30,7 +30,7 @@
   <label>@Html.RadioButtonFor(model => model.Rating,4) ⭐⭐⭐⭐</label><br>
   <label>@Html.RadioButtonFor(model => model.Rating,5) ⭐⭐⭐⭐⭐ </label><br>
   <br>
-  <input type="submit" value="Add new recipe" class="btn btn-primary" />
+  <input type="submit" value="Add new recipe" id="green-button" />
 }
 
 <div class="recipe-links">
