--- a/RecipeBox/Views/Home/Index.cshtml
+++ b/RecipeBox/Views/Home/Index.cshtml
@@ -4,26 +4,24 @@
 
 @using RecipeBox.Models;
 
-<div class="recipeIndex">
-  <h1 class="title">Welcome to Best Recipes!</h1>
+<div class="recipeIndexLayout">
+  <h1 class="main-title">Welcome to Best Recipes!</h1>
 
   @if (User.Identity.IsAuthenticated)
   {
-    <h4>Recipes for @ViewBag.FirstName!</h4>
+    <h2>Recipes for @ViewBag.FirstName!</h2>
     @if (Model.Count == 0)
     {
-      <p>No recipes have been added yet!</p>
+      <h3>No recipes have been added yet!</h3>
     } 
-    <ul>
       @foreach (Recipe recipe in Model)
       {
-        <li>@Html.ActionLink(@recipe.Name, "Details", "Recipes", new { id = @recipe.RecipeId})</li>
+        <h3 class="instructions">@Html.ActionLink(@recipe.Name, "Details", "Recipes", new { id = @recipe.RecipeId})</h3>
       }
-    </ul>
   }
   else
   {
-    <h4>Recipes</h4>
+    <h3>Recipes</h3>
     <p>Please @Html.ActionLink("log in", "LogIn", "Account") to view or manage your recipes.</p>
   }
 
