--- a/RecipeBox/Views/Recipes/Delete.cshtml
+++ b/RecipeBox/Views/Recipes/Delete.cshtml
@@ -4,13 +4,11 @@
 
 @model RecipeBox.Models.Recipe
 
-<h2>Are you sure you want to delete this recipe?</h2>
+<h2>Are you sure you want to delete this recipe for @Html.DisplayFor(model => model.Name)?</h2>
 
-@Html.DisplayNameFor(model => model.Name): @Html.DisplayFor(model => model.Name)
-<br><br>
 @using (Html.BeginForm())
 {
-  <input type="submit" value="Delete" />
+  <input type="submit" value="Confirm Delete" id="green-button"/>
 }
 
 <div class="recipe-links">
