--- a/RecipeBox/Views/Recipes/Edit.cshtml
+++ b/RecipeBox/Views/Recipes/Edit.cshtml
@@ -22,7 +22,7 @@
   @Html.LabelFor(model => model.Instructions)
   @Html.TextAreaFor(model => model.Instructions)
   <br><br>
-  <input type="submit" value="Save" />
+  <input type="submit" value="Save" id="green-button"/>
 }
 
 <div class="recipe-links">
