--- a/RecipeBox/Views/Tags/AddRecipe.cshtml
+++ b/RecipeBox/Views/Tags/AddRecipe.cshtml
@@ -4,18 +4,16 @@
 
 @model RecipeBox.Models.Tag
 
-<h2>Add a recipe</h2>
-
-<h4>Add a recipe to @Html.DisplayFor(model => model.Title)</h4>
+<h2>Add a recipe to @Html.DisplayFor(model => model.Title)</h2>
 
 @using (Html.BeginForm())
 {
   @Html.HiddenFor(model => model.TagId)
 
-  @Html.Label("Select recipe:")
+  @Html.Label("Select recipe: ")
   @Html.DropDownList("RecipeId")
   <br><br>
-  <input type="submit" value="Save" />
+  <input type="submit" value="Save" id="green-button"/>
 }
 
 <div class="recipe-links">
