--- a/RecipeBox/Views/Tags/Delete.cshtml
+++ b/RecipeBox/Views/Tags/Delete.cshtml
@@ -8,7 +8,7 @@
 
 @using (Html.BeginForm())
 {
-    <input type="submit" value="Confirm delete" />
+    <input type="submit" value="Confirm Delete" id="green-button"/>
 }
 
 <div class="recipe-links">
